# IO_Redirection

./: CMakeLists.txt  main.c
data/original_files/: hello.txt
data/redirect_files/: hello.txt
pmem_redirection/: mem_alloc.c
pmem_redirection/PMEM_IO_Redirection/: CMakeLists.txt
pmem_redirection/PMEM_IO_Redirection/src/: CMakeLists.txt  main.c  metadata.c  metadata.h  pmem_io_redirection.c  pmem_io_redirection.h  preload.c
pmem_redirection/PMEM_IO_Redirection/test/: CMakeLists.txt  bin1.c  bin2.c  bin3.c
pmem_redirection/pmem_ldpreload/: Makefile  pmem_io_redirection.c  test.sh
src/: CMakeLists.txt  metadata.c  metadata.h  preload.c
test/: CMakeLists.txt  bin1.c  bin2.c  bin3.c  expected.txt  hello.txt  main  main.c  myfopen.c  test.sh
